add_library(sraxf STATIC
    bio-start.c
    color-from-dna.c
    denormalize.c
    dna-from-color.c
    dynamic-454-read-descriptor.c
    extract-coordinates.c
    extract-name_coord.c
    extract-name_fmt.c
    extract-spot_name.c
    format-spot-name.c
    fpcodec.c
    index_lookup.c
    make-position.c
    normalize.c
    prefix-tree-to-name.c
    process-position.c
    qstat-trigger.c
    qual4_decode.c
    qual4_encode.c
    read-desc.c
    read-seg-from-readn.c
    rewrite-spot-name.c
    rotate.c
    set-rna-flag.c
    spot-desc.c
    spot-filter.c
    stats.c
    stats_quality.c
    stat_mod.c
    swap.c
    syn_quality.c
    tokenize-spot_name-454.c
    tokenize-spot_name-abi.c
    tokenize-spot_name-generic-fastq.c
    tokenize-spot_name-helicos.c
    tokenize-spot_name-illumina.c
    tokenize-spot_name-ion-torrent.c
    untyped.c
    use-rna-flag.c
    v0-decompress-init.c
    v0-decompress.c
    v0-funcs.c
    varloc.c
)

add_definitions (-D__mod__="libs/sraxf")